Added title helper

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,6 @@
  <!DOCTYPE html>
 <html>
-<head><title>Ruby on Rails Tutorial <%= @title%></title></head>
+<head><title><%= title%></title></head>
 <%= csrf_meta_tag %>  
 <body>
 <h1><%= @title%></h1>
