added a title helper and csS

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,9 +1,14 @@
  <!DOCTYPE html>
 <html>
-<head><title><%= title%></title></head>
-<%= csrf_meta_tag %>  
-<body>
-<h1><%= @title%></h1>
- <%= yield%>
-</body>
+	<head>
+		<title><%= title%></title>
+		<%= csrf_meta_tag %> 
+		<%= stylesheet_link_tag 'blueprint/screen', :media => 'screen'%> 
+		<%= stylesheet_link_tag 'blueprint/print', :media => 'print'%> 
+	</head>
+	
+	<body>
+		<h1><%= @title%></h1>
+		<%= yield%>
+	</body>
 </html>
