Finished user signup

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,7 +2,7 @@
 
 
 <%= form_for(@user)	do |f| %>
-	
+	<%= render 'shared/error_messages'%>
 	<div class="field">
 		<%= f.label :name %> <br />
 		<%= f.text_field :name %>
