Finish user edit, update index and destroy actions

--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,4 +1,6 @@
 <li>
 	<%= gravatar_for user, :size => 30 %>
-	<%= link_to user.name, user %> 
-</li>
+	<%= link_to user.name, user %>
+	<% if current_user.admin? %>
+	<%= button_to "delete", user, :method => :delete, :class => :destroy %>
+<% end %> </li>
